--- a/core/templates/admin/base_site.html
+++ b/core/templates/admin/base_site.html
@@ -14,7 +14,7 @@
     {{ block.super }}
     {% comment %} Agrega tus enlaces personalizados aquí con estilos mejorados {% endcomment %}
     <li><a href="{% url 'admin:index' %}">Admin</a></li>
-    <li><a href="{% url 'import_consumo' %}">Importar Consumo</a></li>
+    <li><a href="{% url 'import_consumo' %}">Importar Consumo 2</a></li>
 </ul>
 {% endblock %}
 
